added first two comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Popular Photos</string>
+    <string name="view_all_x_comments">View all x comments</string>
 </resources>
